===============================================

* Changes in behaviour
  * The "(deleted)" marker for unlinked paths of file descriptors is now printed
    outside angle brackets;  the matching of unlinked paths of file descriptors
    no longer includes the " (deleted)" part into consideration.

* Improvements
  * Implemented printing of Unix socket sun_path field's SELinux context.
  * Implemented decoding of IFLA_TSO_MAX_SIZE, IFLA_TSO_MAX_SEGS,
    NDA_FDB_EXT_ATTRS, NDA_FLAGS_EXT, NDA_NDM_FLAGS_MASK,
    and NDA_NDM_STATE_MASK netlink attributes.
  * Improved decoding of INET_DIAG_LOCALS, INET_DIAG_MD5SIG, INET_DIAG_PEERS,
    INET_DIAG_PROTOCOL, INET_DIAG_REQ_PROTOCOL, INET_DIAG_SHUTDOWN,
    INET_DIAG_SK_BPF_STORAGES, INET_DIAG_SOCKOPT, and INET_DIAG_ULP_INFO
    NETLINK_SOCK_DIAG netlink attributes.
  * Enhanced decoding of arch_prctl and prctl syscalls.
  * Enhanced siginfo_t decoding.
  * Updated decoding of struct rtnl_link_stats64.
  * Updated lists of DEVCONF_*, FAN_MARK_*, GPIO_V2_LINE_FLAG_*, IORING_*,
    KEXEC_*, LANDLOCK_*, NET_IPV4_CONF_*, NLM_F_*, NT_*, PR_*, SECCOMP_*,
    UFFD_FEATURE_*, V4L2_CID_*, and V4L2_PIX_FMT_* constants.
  * Updated lists of ioctl commands from Linux 5.19.

* Bug fixes

Noteworthy changes in release 5.18 (2022-06-18)
===============================================

* Improvements
  * Added an interface of raising des Strausses awareness.
  * Added --tips option to print strace tips, tricks, and tweaks
    at the end of the tracing session.
  * Enhanced decoding of bpf and io_uring_register syscalls.
  * Implemented decoding of COUNTER_*, RTC_PARAM_GET, and RTC_PARAM_SET ioctl
    commands.
  * Updated lists of BPF_*, BR_*, BTRFS_*, IFA_*, IFLA_*, IORING_*, KEY_*,
    KVM_*, MADV_*, and UFFD_* constants.
  * Updated lists of ioctl commands from Linux 5.18.

* Bug fixes
  * Fixed printing of the updated value of union bpf_attr.next_id
    on the exiting of bpf(BPF_*_GET_NEXT_ID) calls.
