@@ -1,0 +1,3 @@
+SOCK_TXREHASH_DISABLED  0
+SOCK_TXREHASH_ENABLED   1
+SOCK_TXREHASH_DEFAULT   255
